syntax_error_v318_2.txt
d:\Downloads\DeskShare\js\chat-manager.js:579
                    </div>
                    ^

SyntaxError: Unexpected token '<'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.20.0
